# git_sync

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRDPARTY  build_deb.sh  build_rpm.sh  flake.nix  generate_docs.sh
.cargo/: audit.toml  config.toml
.github/workflows/: lint.yml  rust.yml  toml.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/git_sync/: all.html  fn.main.html  index.html  macro.async_retry!.html  macro.async_retry.html  macro.handle_api_response!.html  macro.handle_api_response.html  macro.handle_futures_unordered!.html  macro.handle_futures_unordered.html  sidebar-items.js
docs/git_sync/cli/: enum.BackupCommand.html  enum.BackupDestination.html  enum.BranchCommand.html  enum.Command.html  enum.MakeLatest.html  enum.PRCommand.html  enum.ReleaseCommand.html  enum.RepoCommand.html  enum.RepositoryType.html  enum.TagCommand.html  fn.cli.html  fn.dir_exists.html  fn.parse_args.html  fn.validate_jobs.html  index.html  sidebar-items.js  struct.AppArgs.html  struct.BackupRepoCommand.html  struct.CheckRepoCommand.html  struct.ClosePRCommand.html  struct.CompareTagCommand.html  struct.CreateBranchCommand.html  struct.CreatePRCommand.html  struct.CreateReleaseCommand.html  struct.CreateTagCommand.html  struct.DeleteBranchCommand.html  struct.DeleteTagCommand.html  struct.MergePRCommand.html  struct.PruneBackupCommand.html  struct.SyncRepoCommand.html  struct.SyncTagCommand.html
docs/git_sync/config/: constant.CONFIG_NAME.html  index.html  sidebar-items.js  struct.Config.html  struct.GitConfig.html  struct.GithubConfig.html  struct.InfoConfig.html  struct.MiscSettings.html  struct.RepoConfig.html  struct.SlackConfig.html
docs/git_sync/error/: enum.ErrorCategory.html  enum.GitError.html  fn.is_network_error.html  fn.is_retryable.html  fn.octocrab_error_info.html  index.html  sidebar-items.js  struct.UserError.html
docs/git_sync/github/: index.html  sidebar-items.js
docs/git_sync/github/backup/: constant.PART_SIZE.html  index.html  sidebar-items.js
docs/git_sync/github/branch/: index.html  sidebar-items.js  struct.GitTagObject.html  struct.GitTagTarget.html
docs/git_sync/github/check/: index.html
docs/git_sync/github/client/: enum.OutputMode.html  index.html  sidebar-items.js  struct.Comparison.html  struct.GithubClient.html
docs/git_sync/github/fork/: index.html  sidebar-items.js  static.GRAPHQL_QUERY.html  struct.BranchCommits.html  struct.BranchConnection.html  struct.BranchNode.html  struct.CommitTarget.html  struct.PageInfo.html  struct.RepoRefs.html  struct.RepositoryData.html
docs/git_sync/github/match_args/: fn.generate_manpages.html  fn.match_arguments.html  fn.match_backup_cmds.html  fn.match_branch_cmds.html  fn.match_pr_cmds.html  fn.match_release_cmds.html  fn.match_repo_cmds.html  fn.match_tag_cmds.html  fn.write_man.html  index.html  sidebar-items.js
docs/git_sync/github/pr/: index.html
docs/git_sync/github/release/: index.html  sidebar-items.js  static.CVE_REGEX.html  static.ODP_REGEX.html
docs/git_sync/github/tag/: fn.get_local_branches.html  fn.get_local_commit_branch.html  fn.get_remote_branches.html  fn.get_remote_commit_branch.html  index.html  sidebar-items.js  struct.PageInfo.html  struct.ParentRepo.html  struct.Refs.html  struct.RepoData.html  struct.RepoResponse.html  struct.Repository.html  struct.TagNode.html  struct.TagTarget.html
docs/git_sync/init/: constant.SAMPLE_CONFIG.html  fn.generate_config.html  index.html  sidebar-items.js
docs/git_sync/slack/: index.html  sidebar-items.js
docs/git_sync/slack/post_message/: fn.send_slack_message.html  index.html
docs/git_sync/utils/: index.html  sidebar-items.js
docs/git_sync/utils/compress/: fn.compress_directory.html  fn.decode_tar_gz.html  index.html  sidebar-items.js
docs/git_sync/utils/macros/: index.html
docs/git_sync/utils/pr/: enum.MergeMethod.html  index.html  sidebar-items.js  struct.CreatePrOptions.html  struct.MergePrOptions.html
docs/git_sync/utils/repo/: enum.TagType.html  fn.get_http_status.html  fn.get_repo_info_from_url.html  fn.http_to_ssh_repo.html  fn.opt_bool.html  index.html  sidebar-items.js  static.REPO_REGEX.html  struct.BranchProtectionRule.html  struct.Checks.html  struct.LicenseInfo.html  struct.RepoChecks.html  struct.RepoInfo.html  struct.TagInfo.html
docs/git_sync/utils/tables/: index.html  struct.Table.html
docs/git_sync/utils/user/: index.html  sidebar-items.js  struct.UserDetails.html
docs/search.desc/git_sync/: git_sync-desc-0-.js
docs/src/git_sync/: cli.rs.html  config.rs.html  error.rs.html  init.rs.html  main.rs.html
docs/src/git_sync/github/: backup.rs.html  branch.rs.html  check.rs.html  client.rs.html  fork.rs.html  match_args.rs.html  mod.rs.html  pr.rs.html  release.rs.html  tag.rs.html
docs/src/git_sync/slack/: mod.rs.html  post_message.rs.html
docs/src/git_sync/utils/: compress.rs.html  macros.rs.html  mod.rs.html  pr.rs.html  repo.rs.html  tables.rs.html  user.rs.html
docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/trait.impl/core/convert/: trait.From.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/error/: trait.Error.js
man/: git_sync-branch.1  git_sync-check.1  git_sync-compare.1  git_sync-config.1  git_sync-create.1  git_sync-delete.1  git_sync-open.1  git_sync-pr.1  git_sync-release.1  git_sync-repo.1  git_sync-sync.1  git_sync-tag.1  git_sync.1
src/: cli.rs  config.rs  error.rs  github.rs  init.rs  lib.rs  main.rs  utils.rs
src/github/: backup.rs  branch.rs  check.rs  client.rs  fork.rs  match_args.rs  mod.rs  parse.rs  pr.rs  release.rs  tag.rs
src/slack/: mod.rs  post_message.rs  upload_file.rs
src/utils/: compress.rs  file_replace.rs  file_utils.rs  filter.rs  macros.rs  misc.rs  mod.rs  pr.rs  repo.rs  tables.rs  user.rs
(+13 files in other folders)
