[package]
authors     = ["Jeffrey Smith <jeffrey.smith@acceldata.io>"]
description = "A tool for managing git repositories"
edition     = "2024"
homepage    = "https://github.com/acceldata-io/git_sync"
license     = "Apache-2.0"
name        = "git_sync"
version     = "1.0.7"


[dependencies]
aws-config = { features = ["rustls"], optional = true, version = "1.8.14" }
aws-lc-rs  = "1.15.4"
aws-sdk-s3 = { optional = true, version = "1.123" }
# Override the 'bytes' library to fix a CVE
bytes = "1.11.1"
chrono = { features = ["clock", "iana-time-zone", "std"], version = "0.4" }
clap = { features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
], version = "4.5.58" }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
console = "0.16.1"
dashmap = "6.1.0"
env_logger = "0.11.9"
fancy-regex = "0.17"
flate2 = { default-features = false, features = ["zlib-ng"], version = "1.1.2" }
futures = { features = ["alloc", "async-await", "std"], version = "0.3.31" }
http = "1.3"
http-body-util = "0.1.3"
hyper = { default-features = false, version = "1.7.0" }
iana-time-zone = "0.1"
indexmap = { features = ["serde"], version = "2.11" }
indicatif = { features = ["tokio"], version = "0.18.0" }
log = "0.4.29"
microxdg = "0.2.0"
octocrab = { default-features = false, features = [
  "default-client",
  "follow-redirect",
  "jwt-aws-lc-rs",
  "retry",
  "rustls",
  "rustls-aws-lc-rs",
  "stream",
  "timeout",
  "tokio",
], version = "0.49.5" }
reqwest = { features = [
  "__tls",
  "charset",
  "http2",
  "json",
], version = "0.13.2" }
rustls = { features = ["aws_lc_rs"], version = "0.23" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
tabled = { features = ["ansi", "macros", "std"], version = "0.20" }
tar = "0.4.44"
tempfile = "3.25.0"
thiserror = "2.0"
# Time is not used directly, but it needs to be upgraded to fix a CVE
time        = "0.3.47"
tokio       = { features = ["macros", "rt-multi-thread"], version = "1.47" }
tokio-retry = "0.3"
toml        = "1.0"
#sqlx = { version = "0.8.6", optional = true, default-features = false, features = [
#  "chrono",
#  "derive",
#  "json",
#  "macros",
#  "migrate",
#  "runtime-tokio-rustls",
#  "time",
#  "tls-rustls-aws-lc-rs",
#] }
walkdir = "2.5.0"

[features]
aws     = ["dep:aws-config", "dep:aws-sdk-s3"]
default = ["aws", "slack"]
#postgres = ["sql", "sqlx/postgres"]
slack = []
#sql      = ["dep:sqlx"]
#sqlite   = ["sql", "sqlx/sqlite"]

[profile.release]
lto   = "thin"
strip = true

[package.metadata.generate-rpm]
assets = [
  { dest = "/usr/bin/git_sync", mode = "755", source = "target/release/git_sync" },
]

[package.metadata.generate-rpm.requires]
git = " > 2.40"

[package.metadata.deb]
assets = [
  { dest = "usr/bin/", mode = "755", source = "target/release/git_sync" },
  { dest = "usr/share/doc/git_sync/README.md", mode = "644", source = "README.md" },
]
depends = "git, $auto"
extended-description = """
A git management tool for working across multiple git repositories. Can be used
to create/delete branches and tags, create releases with release notes,
check your repositories for stale branches with a regex filter, replace text
across multiple repositories, backup/sync repositories, and send slack
notifications for successful and failed tasks.
"""
maintainer = "Jeffrey Smith <jeffrey.smith@acceldata.io>"
priority = "optional"
section = "utils"
